kubernetes/services/monitoring/loki-tailnet-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-tailnet-proxy
  namespace: monitoring
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: loki-tailnet-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loki-tailnet-proxy
    spec:
      nodeSelector:
        kubernetes.io/hostname: fuji
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: nginx
          image: nginx:alpine@sha256:df221db836e1754089190208cee7eeda94f233197056426eda74a43ab1abeac2
          ports:
            - name: loki-push
              containerPort: 3101
              hostPort: 3101
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: loki-tailnet-proxy-config
